labs/kubernetes/projects/project-a-platform-namespace/manifests/netpol-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: platform
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - ipBlock:
        cidr: 169.254.25.10/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
